PUB-1 defined